# libneo

./: .editorconfig  .gitmodules  CMakeLists.txt  LICENSE  README.md
contrib/: jemalloc.cmake
demo/: CMakeLists.txt  error.c  main.c  nref_borrowed.c  nref_simple.c
doc/: CMakeLists.txt  Doxyfile.in  doxygen-awesome.css
include/: neo.h
include/neo/: _error.h  _nalloc.h  _nbuf.h  _nref.h  _nstr.h  _stddef.h  _string.h  _toolchain.h  _types.h  _unistd.h  hashtab.h  list.h  utf.h
src/: CMakeLists.txt  entry.c  error.c  hashtab.c  list.c  nalloc.c  nbuf.c  neo.ld  nref.c  unistd.c
src/arch/x86_64/: CMakeLists.txt  syscall_linux.S
src/include/neo/: buildconfig.h.in  toolchain.h
src/string/: leftpad.c  nstr.c  nstrcat.c  nstrcmp.c  nstrdup.c  nstrmul.c  string.cmake  utf.c  x2nstr.c
test/: CMakeLists.txt  hashtab.cpp  list.cpp  nbuf.cpp  neo_test.cpp  nref.cpp
test/nbuf/: nbuf.cmake  nbuf_clone.cpp  nbuf_cmp.cpp  nbuf_create.cpp  nbuf_from.cpp  nbuf_from_nstr.cpp  nbuf_from_str.cpp
test/string/: i2nstr.cpp  leftpad.cpp  nstr.cpp  nstrcat.cpp  nstrcmp.cpp  nstrdup.cpp  nstrmul.cpp  string.cmake  u2nstr.cpp
test/string/utf/: utf.cmake  utf8_check.cpp  utf8_chrsize.cpp  utf8_from_nchr.cpp  utf8_ncheck.cpp  utf8_strlen.cpp  utf8_to_nchr.cpp
